fix footer issue only on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ h3 {
     border-top: 3px solid rgba(252, 218, 0, 1);
     min-height: 50px;
     display: block;
-    z-index: -5
+    z-index: 0
   }
   .credit {
     margin-left: 5vw;
